fix and small tweaks
