# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "This is an API for accessing all sorts of college football data.  Please note that API keys should be supplied with \"Bearer \" prepended (e.g. \"Bearer your_key\"). API keys can be acquired from the CollegeFootballData.com website.",
-    "version": "4.4.14",
+    "version": "4.4.15",
     "title": "College Football Data API",
     "contact": {
       "email": "admin@collegefootballdata.com"
@@ -3107,6 +3107,9 @@
         "year": {
           "type": "integer"
         },
+        "teamId": {
+          "type": "integer"
+        },
         "team": {
           "type": "string"
         },
@@ -3379,6 +3382,9 @@
           "items": {
             "type": "object",
             "properties": {
+              "schoolId": {
+                "type": "integer"
+              },
               "school": {
                 "type": "string"
               },
